--- a/课程练习/LS01/demo1.html
+++ b/课程练习/LS01/demo1.html
@@ -25,8 +25,8 @@
 			console.log("i'm",this.name," ",this.age,"years old");
 		};
 		var p1=new Person("Jack",20);
-		p1.showInfo();
-		
+		p1.showInfo();//i'm Jack   20 years old
+
 	</script>
 
 </body>
